# Antenna_characterisation

./: .project  build_script.py  curses_play2.py  dependencies  filtertaps_analysis_9100_10000_120  functions.py  install.py  main.py  main_coord_plotting.py  main_plot_threading.py  main_plot_threading_gps.py  main_plot_threading_gps_curses.py  main_with_plot_working180124.py  measurements.txt  requirements.txt  run_script.py  run_script.sh  timedomain.grc  timedomaindata.txt  top_block.py  wifi_script.py
AntChar/: main.py  measurements.txt
AntChar (Case Conflict)/: m.txt
AntChar (Case Conflict)/src/: __init__.py  s_saver.py
AntChar/src/: Antenna.py  Barometer.py  Data.py  GpsPoller.py  __init__.py  functions.py  gnuradiodatacollector.py  gr_antenna.py  gr_antenna_test.py  imports.py  parser.py  radio.py  s_saver.py  signalprocessing.grc  signalprocessing_test.grc  xyz.txt
AntChar_backup_180515/Antchar/: .test.txt.swp  README.txt  default.txt
AntChar_backup_180515/Antchar/src/: Application.py  Barometer.py  Data.py  GpsPoller.py  dsp.py  functions.py  gr_antenna_test.py  s_saver.py  setup.txt  signalprocessing.grc  test.py  window.py
AntChar_old/: .gitignore  main.py
AntChar_old/src/: GpsPoller.py  __init__.py  analyse.grc  analyse_2.grc  analyse_3.grc  functions.py  gr_antenna.py  radio.py  signalprocessing.grc
Antchar/: calibration.txt  default.txt  m.txt  m2.txt  m3.txt  m_RAWvector.txt  m_vector.txt  main.py  meas.txt  meas_RAWvector.txt  meas_vector.txt  mvec.txt  plotvec.py  setup.txt  test.txt  test_vec.txt  test_vec_RAWvector.txt  test_vec_vector.txt  text_vec.txt
Antchar/measurements/: Measurements Daniel.txt  plott_data.py  ute1.txt  ute10.txt  ute11.txt  ute12.txt  ute13.txt  ute14.txt  ute15.txt  ute2.txt  ute3.txt  ute4.txt  ute5.txt  ute6.txt  ute7.txt  ute8.txt  ute9.txt
Antchar/src/: .goutputstream-BUJPGZ  Antenna.py  Application.py  Calibration.py  Data.py  GpsPoller.py  __init__.py  config.py  drone.py  dsp.py  functions.py  gnuradiodatacollector.py  gr_antenna.py  gr_antenna_test.py  parser.py  s_saver.py  setup.py  setup.txt  signalprocessing.grc  signalprocessing_test.grc  signalprocessing_test2.grc  window.py
Gnuplot/: GnuPlot_spherical.py  GnuPlot_test.py  GnuPlot_test_3D.py  data.txt  sph_dat.txt
Stuff/: AF_data.txt  AF_finder.py  README.md  curses_play2.py  dependencies  github  github.pub  main_plot_threading_working180125.py  run_script.py
gr-antchar/: CMakeLists.txt  MANIFEST.md
gr-antchar/cmake/Modules/: antcharConfig.cmake
gr-antchar/docs/: README.antchar
gr-antchar/docs/doxygen/: Doxyfile.in
gr-antchar/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-antchar/grc/: CMakeLists.txt  antchar_Antenna_loop_ID_ff.xml  antchar_Antenna_switch_c.xml  antchar_E_field_calc_ff.xml  antchar_antenna_polarization_adder_ff.xml  antchar_dbm_correction_py_ff.xml  antchar_event_sink_f.xml  antchar_value_sink_ff.xml  antchar_vector_sink_f.xml
gr-antchar/include/antchar/: CMakeLists.txt  api.h
gr-antchar/lib/: CMakeLists.txt  qa_antchar.cc  qa_antchar.h  test_antchar.cc
gr-antchar/python/: Antenna.py  Antenna_loop_ID.py  Antenna_loop_ID_ff.py  Antenna_switch_c.py  CMakeLists.txt  CorrectionFactor.txt  E_field_calc_ff.py  __init__.py  antenna_polarization_adder_ff.py  dbm_correction_py_ff.py  event_sink_f.py  qa_Antenna_loop_ID_ff.py  qa_Antenna_switch_c.py  qa_E_field_calc_ff.py  qa_antenna_polarization_adder_ff.py  qa_dbm_correction_py_ff.py  qa_event_sink_f.py  qa_value_sink_ff.py  qa_vector_sink_f.py  value_sink_ff.py  vector_sink_f.py
gr-antchar/python/.unittests/python/: qa_E_field_calc_ff.xml  qa_dbm_correction_py_ff.xml
gr-antchar/swig/: CMakeLists.txt  antchar_swig.i
src/: Signal source meas - Draft.grc  analyse.grc  antennacontrol.py  gr_antenna.py  sigsourcemeas.py
src/root/nested/: example.py  radio-companion-test.py
